src/test/deca/syntax/valid/parser/oracle/inst_eigth_deriv.deca
{
	int x = 2;
	while(5){}
	while((x + 3) == 5){
		x + 5;
		x - 4;
	}
	while(true){
		while(false){
			x = 1;
		}
	}
	while(x + 50 == 2){
		printlnx("Hello World !");
	}
}
