src/test/deca/syntax/invalid/parser/with_object/method_block_invalid3.deca
class A { a a (){int x = 3 = 2;} }